--- a/packages.yml
+++ b/packages.yml
@@ -1,4 +1,3 @@
 packages:
-  - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: bugfix/redshift-limit-one
-    warn-unpinned: false
+- package: fivetran/shopify_source
+  version: [">=0.15.0", "<0.16.0"]
