--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '0.15.0'
+version: '0.16.0'
 profile: 'integration_tests'
 config-version: 2
 
@@ -13,7 +13,7 @@ vars:
   # shopify_using_fulfillment_event: true
   # shopify_using_all_metafields: true
   # shopify__standardized_billing_model_enabled: true
-  shopify_schema: shopify_integration_tests_12
+  shopify_schema: shopify_integration_tests_15
 
   shopify_source:
     shopify_customer_identifier: "shopify_customer_data"
@@ -57,7 +57,7 @@ dispatch:
 
 models:
   +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
-  # +schema: "shopify_{{ var('directed_schema','dev') }}"
+  # +schema: "shopify_{{ var('directed_schema','dev') }}" ## To be used for validation tests
 
 seeds:
   shopify_integration_tests:
