Product variant metafield data

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -184,6 +184,7 @@ seeds:
         _fivetran_synced: timestamp
         created_at: timestamp
         updated_at: timestamp
+        owner_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
     shopify_shop_data:
       +column_types:
         taxes_included: boolean
