--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -13,6 +13,7 @@ vars:
   # shopify_using_fulfillment_event: true
   # shopify_using_all_metafields: true
   # shopify__standardized_billing_model_enabled: true
+
   shopify_schema: shopify_integration_tests_15
 
   shopify_source:
@@ -181,6 +182,8 @@ seeds:
       +column_types:
         value_type: "{{ 'string' if target.type in ('bigquery', 'spark', 'databricks') else 'varchar' }}"
         type: "{{ 'string' if target.type in ('bigquery', 'spark', 'databricks') else 'varchar' }}"
+        id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
+        owner_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         _fivetran_synced: timestamp
         created_at: timestamp
         updated_at: timestamp
