--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,6 @@
 packages:
-- package: fivetran/shopify_source
-  version: [">=0.15.0", "<0.16.0"]
+# - package: fivetran/shopify_source
+#   version: [">=0.16.0", "<0.17.0"]
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: feature/add-inventory-quantity
+    warn-unpinned: false
