--- a/packages.yml
+++ b/packages.yml
@@ -1,6 +1,3 @@
 packages:
-# - package: fivetran/shopify_source
-#   version: [">=0.17.0", "<0.18.0"]
-# - local: ../dbt_shopify_source
-- git: https://github.com/fivetran/dbt_shopify_source.git
-  revision: update/remove-dbt-date-dep
+- package: fivetran/shopify_source
+  version: [">=0.17.0", "<0.18.0"]
