--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,13 +25,18 @@ vars:
     shopify_abandoned_checkout: "{{ ref('stg_shopify__abandoned_checkout') }}"
     shopify_collection_product: "{{ ref('stg_shopify__collection_product') }}"
     shopify_collection: "{{ ref('stg_shopify__collection') }}"
-    shopify_customer_tag: "{{ ref('stg_shopify__customer_tag') }}"
+    shopify_customer_tag: "{{ ref('stg_shopify__customer_tag') }}"    
+    shopify_discount_allocation: "{{ ref('stg_shopify__discount_allocation') }}" 
+    shopify_discount_application: "{{ ref('stg_shopify__discount_application') }}" 
+    shopify_discount_basic_code: "{{ ref('stg_shopify__discount_basic_code') }}"    
     shopify_discount_code: "{{ ref('stg_shopify__discount_code') }}"
     shopify_fulfillment: "{{ ref('stg_shopify__fulfillment') }}"
     shopify_inventory_item: "{{ ref('stg_shopify__inventory_item') }}"
     shopify_inventory_level: "{{ ref('stg_shopify__inventory_level') }}"
     shopify_inventory_quantity: "{{ ref('stg_shopify__inventory_quantity') }}"
     shopify_location: "{{ ref('stg_shopify__location') }}"
+    shopify_media: "{{ ref('stg_shopify__media') }}"
+    shopify_media_image: "{{ ref('stg_shopify__media_image') }}"    
     shopify_metafield: "{{ ref('stg_shopify__metafield') }}"
     shopify_order_note_attribute: "{{ ref('stg_shopify__order_note_attribute') }}"
     shopify_order_shipping_line: "{{ ref('stg_shopify__order_shipping_line') }}"
@@ -40,6 +45,7 @@ vars:
     shopify_order_url_tag: "{{ ref('stg_shopify__order_url_tag') }}"
     shopify_price_rule: "{{ ref('stg_shopify__price_rule') }}"
     shopify_product_image: "{{ ref('stg_shopify__product_image') }}"
+    shopify_product_media: "{{ ref('stg_shopify__product_media') }}"
     shopify_product_tag: "{{ ref('stg_shopify__product_tag') }}"
     shopify_shop: "{{ ref('stg_shopify__shop') }}"
     shopify_tax_line: "{{ ref('stg_shopify__tax_line') }}"
