--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -30,6 +30,9 @@ vars:
     shopify_collection_product_identifier: "shopify_collection_product_data"
     shopify_collection_identifier: "shopify_collection_data"
     shopify_customer_tag_identifier: "shopify_customer_tag_data"
+    shopify_discount_allocation_identifier: "shopify_discount_allocation_data"
+    shopify_discount_application_identifier: "shopify_discount_application_data"
+    shopify_discount_basic_code_identifier: "shopify_discount_basic_code_data"
     shopify_discount_code_identifier: "shopify_discount_code_data"
     shopify_fulfillment_identifier: "shopify_fulfillment_data"
     shopify_fulfillment_event_identifier: "shopify_fulfillment_event_data"
@@ -37,6 +40,8 @@ vars:
     shopify_inventory_level_identifier: "shopify_inventory_level_data"
     shopify_inventory_quantity_identifier: "shopify_inventory_quantity_data"
     shopify_location_identifier: "shopify_location_data"
+    shopify_media_identifier: "shopify_media_data"
+    shopify_media_image_identifier: "shopify_media_image_data"
     shopify_metafield_identifier: "shopify_metafield_data"
     shopify_order_note_attribute_identifier: "shopify_order_note_attribute_data"
     shopify_order_shipping_line_identifier: "shopify_order_shipping_line_data"
@@ -45,6 +50,7 @@ vars:
     shopify_order_url_tag_identifier: "shopify_order_url_tag_data"
     shopify_price_rule_identifier: "shopify_price_rule_data"
     shopify_product_image_identifier: "shopify_product_image_data"
+    shopify_product_media_identifier: "shopify_product_media_data"
     shopify_product_tag_identifier: "shopify_product_tag_data"
     shopify_shop_identifier: "shopify_shop_data"
     shopify_tax_line_identifier: "shopify_tax_line_data"
